# talking-head-anime-4-demo

./: .gitignore  LICENSE  README.md
data/character_models/lambda_00/: body_morpher.pt  character_model.yaml  face_morpher.pt
data/character_models/lambda_01/: body_morpher.pt  face_morpher.pt
data/distill_examples/lambda_00/: config.yaml
data/distill_examples/lambda_01/: config.yaml
data/images/: README.md  lambda_00_face_mask.xcf  lambda_01_face_mask.xcf
distiller-ui-doc/: index.html
distiller-ui-doc/params/: body_morpher_batch_size.html  body_morpher_random_seed_0.html  body_morpher_random_seed_1.html  character_image_file_name.html  face_mask_image_file_name.html  face_morpher_batch_size.html  face_morpher_random_seed_0.html  face_morpher_random_seed_1.html  num_cpu_workers.html  num_gpus.html  num_training_examples_per_sample_output.html  prefix.html
docs/: character_model_ifacialmocap_puppeteer.md  character_model_manual_poser.md  character_model_mediapipe_puppeteer.md  distill.md  distiller_ui.md  full_manual_poser.md
poetry/: pyproject.toml
src/tha4/: image_util.py
src/tha4/app/: character_model_ifacialmocap_puppeteer.py  character_model_manual_poser.py  character_model_mediapipe_puppeteer.py  distill.py  distiller_ui.py  full_manual_poser.py
src/tha4/charmodel/: character_model.py
src/tha4/dataset/: image_poses_and_aother_images_dataset.py
src/tha4/distiller/: config_based_training_tasks.py  distill_body_morpher.py  distill_face_morpher.py  distiller_config.py
src/tha4/mocap/: ifacialmocap_pose.py  ifacialmocap_pose_converter_25.py  (+5 more)
(+94 files in other folders)
